Fix spacing and add cookie popup
For Main Page.

--- a/src/assets/scss/elements/brand.scss
+++ b/src/assets/scss/elements/brand.scss
@@ -2,6 +2,7 @@
   color: black;
   display: block;
   font-size: 1.18rem;
+  left: 2.5rem;
   letter-spacing: .2rem;
   position: absolute;
   text-transform: uppercase;
