--- a/src/assets/scss/layouts/content.scss
+++ b/src/assets/scss/layouts/content.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex: 1 1 auto;
   justify-content: center;
-  padding: 1rem 1rem 0;
+  padding: 2.2rem 2.5rem 0;
   position: relative;
 
   @media (min-width: $screen-sm) {
