--- a/src/assets/scss/layouts/footer.scss
+++ b/src/assets/scss/layouts/footer.scss
@@ -1,11 +1,25 @@
 .footer {
   background: white;
+  bottom: 0;
   display: flex;
   flex-direction: row;
   padding: 0 2.5rem 0;
-  position: relative;
+  position: absolute;
   margin-top: 3rem;
   width: 100%;
+
+  @media (min-width: $screen-sm) {
+    position: relative;
+  }
+
+  .eupopup-container-bottom {
+    bottom: 0;
+    top: inherit;
+
+    @media (min-width: $screen-sm) {
+      top: 0;
+    }
+  }
 }
 
 .footer p {
@@ -27,15 +41,18 @@
   flex: 0 1 auto;
 }
 
-.footer__aligned--left {
-  // align-self: flex-start;
-}
-
-.footer__aligned--center {
-  // align-self: center;
-  // text-align: center;
-}
-
 .footer__aligned--right {
   margin-left: auto;
+}
+
+.footer__aligned--left,
+.footer__aligned--right {
+  display: none;
+}
+
+@media (min-width: $screen-sm) {
+  .footer__aligned--left,
+  .footer__aligned--right {
+    display: block;
+  }
 }
